# alphax_dashboards

./: MANIFEST.in  README.md  pyproject.toml  setup.py
alphax_dashboards/: hooks.py  modules.txt
alphax_dashboards/api/: crm.py  finance.py  hrms.py
alphax_dashboards/public/css/: alphax_dashboards.css
alphax_dashboards/public/js/: alphax_dashboards.js
alphax_dashboards/www/: alphax-crm-dashboard.html  alphax-finance-dashboard.html  alphax-hrms-management-dashboard.html  alphax-hrms-self-service-dashboard.html  alphax-hrms-self-service-dashboard.py
